fix(i18n): add validation translation strings

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -512,6 +512,8 @@
 		"expirationInfo": "Describe how long this badge is generally valid. This information can also be changed when awarding the badge. Badges are marked as expired after their validity period has expired.",
 		"validUntil": "The badge is valid until ",
 		"chooseDuration": "Choose duration",
+		"durationPositive": "Please enter a positive number or 0",
+		"valuePositive": "Please enter a positive number",
 		"optionalBadgeDetails": "Optional badge details",
 		"addTags": "Add tags",
 		"newTag": "Enter a tag...",
