--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -512,6 +512,8 @@
 		"expirationInfo": "Diese Information kann auch bei der Vergabe geändert werden. Badges werden nach Ablauf der Gültigkeit als abgelaufen markiert.",
 		"validUntil": "Der Badge ist gültig bis ",
 		"chooseDuration": "Wähle Dauer",
+		"durationPositive": "Bitte gib eine positive Zahl oder 0 ein",
+		"valuePositive": "Bitte gib eine positive Zahl ein",
 		"optionalBadgeDetails": "Optionale Badge-Details",
 		"addTags": "Tags hinzufügen",
 		"newTag": "Einen Tag eingeben...",
