Feat/cms contents (#1339)
* feat(cms): add cms components

* fix(cms): updates for scripts, news

* fix(cms): revert prod baseUrl

* feat(cms): menu structure as tree

* fix(oeb-dropdown): add noTranslate input

* feat(cms): set components standalone, signal inputs

* fix(cms): fix for blog post image

* feat(cms): angular components in cms content, ki-assistant demo

* fix(shadow-dom): add overflow hidden

* feat(ai-demo): rename, add altcha

* feat(ai-demo): rename v2

* fix: remove FaqComponent from module declarations

* fix(ai-demo): working altcha implementation

* fix(ai-demo): clear altcha header after request

* feat(ai-assistent): layout, demo badge

* fix(cms-contents): post merge fixes

* fix(cms): enable angular inline scss, import oeb_styles into shadow-dom

* refactor(loading-dots): move css from screen.css to component

* feat(cms): add loading-dots

* fix(cms): fix some css import errors

* fix(shadow-dom): move scss to external file

* fix: remove version.ts

* fix: cleanup prettier

* fix(i18n): add translation for badge preview button

* fix(cms): remove shadow dom script timeout

* feat(cms): add 404 handling, version component

* fix(cms): forgot to stage 404 component

* fix(i18n): add validation translation strings

* fix(createbadge): fix for validator functions missing this context

* fix: correct baseUrl in environment.prod

* fix(cms): styling fixes, language changing on start page

* fix(cms): ai-assistant styles, fix ai result bg color

* fix(cms): prevent fetching page content twice

* feat(cms): add proper language handling to page-component

* fix(format): run prettier

---------

Co-authored-by: jona159 <65068389+jona159@users.noreply.github.com>
Co-authored-by: David Scheidt <david.scheidt@opensenselab.org>

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -104,6 +104,7 @@
 		"imported": "importiert",
 		"new": "neu",
 		"expired": "abgelaufen",
+		"readmore": "weiterlesen",
 		"emailAddress": "E-Mail-Adresse",
 		"tos": "Nutzungsbedingungen",
 		"change": "ändern",
@@ -171,7 +172,8 @@
 		"forEleText3": "Du kannst Badges per Email oder per QR-Code an deine Lernenden vergeben.",
 		"forEleHeadlinet4": "Lernende erhalten und sammeln Badges",
 		"forEleText4": "Lernende erhalten Badges mit den erworbenen Kompetenzen. Sie erlangen dadurch einen besseren Überblick über ihr Können.",
-		"usingOEB": "Diese Institutionen nutzen bereits Open Educational Badges"
+		"usingOEB": "Diese Institutionen nutzen bereits Open Educational Badges",
+		"createBadgePreview": "Badge-Vorschau erstellen"
 	},
 	"Issuer": {
 		"map": "Karte",
@@ -510,6 +512,8 @@
 		"expirationInfo": "Diese Information kann auch bei der Vergabe geändert werden. Badges werden nach Ablauf der Gültigkeit als abgelaufen markiert.",
 		"validUntil": "Der Badge ist gültig bis ",
 		"chooseDuration": "Wähle Dauer",
+		"durationPositive": "Bitte gib eine positive Zahl oder 0 ein",
+		"valuePositive": "Bitte gib eine positive Zahl ein",
 		"optionalBadgeDetails": "Optionale Badge-Details",
 		"addTags": "Tags hinzufügen",
 		"newTag": "Einen Tag eingeben...",
@@ -534,6 +538,7 @@
 		"pleaseAddCompetencies": "Bitte Kompetenzen hinzufügen",
 		"invalidCompetence": "Ungültige Kompetenz",
 		"competencyOptions": "Du hast zwei Möglichkeiten, händisch Kompetenzen zu ergänzen.",
+		"chooseCompetency": "Wähle Kompetenzen durch Anklicken aus, um sie deinem Badge hinzuzufügen.",
 		"escoSearch": {
 			"headline": "ESCO-Kompetenz",
 			"description": "Damit unsere Badges inhaltlich standardisiert und vergleichbar sind, nutzt der KI-Assistent <a class='tw-text-[var(--color-link)] tw-underline' href='https://esco.ec.europa.eu/de/about-esco' target='_blank'>die Europäische Klassifizierung für Kompetenzen (ESCO)</a>. Du kannst hier selbst nach passenden Kompetenzen suchen und sie hinzufügen:",
