--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -875,7 +875,15 @@
 		"dontHavePassword": "You don't have your current password?",
 		"clickHere": "Click here",
 		"resetByEmail": "to reset by email.",
-		"emails": "Emails"
+		"emails": "Emails",
+		"passwordInsecure": "Your password must be unusual and contain at least 8 characters (including 1 capital letter, 1 number, and 1 special character).",
+		"pleaseTryAgain": "Please try again.",
+		"passwordMinRequirements": "(At least 8 characters, including 1 uppercase letter, 1 number, and 1 special character)",
+		"createNewPassword": "Create new password",
+		"repeatNewpassword": "Repeat new password",
+		"weIncreasedPasswordRequirements": "We have increased our password requirements.",
+		"pleaseRenewPassword": "Therefore, we kindly request that you update your password.",
+		"pleaseRenewPasswordInfo": "Takes only a moment and provides greater protection."
 	},
 	"Welcome": {
 		"heading": "Nice to see you!",
