--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -880,10 +880,12 @@
 		"pleaseTryAgain": "Bitte versuche es erneut.",
 		"passwordMinRequirements": "(mind. 8 Zeichen, davon 1 Großbuchstabe, 1 Zahl und 1 Sonderzeichen)",
 		"createNewPassword": "Neues Passwort erstellen",
-		"repeatNewpassword": "Neues Passwort wiederholen",
+		"repeatNewPassword": "Neues Passwort wiederholen",
+		"saveNewPassword": "Neues Passwort speichern",
 		"weIncreasedPasswordRequirements": "Wir haben unsere Anforderungen an Passwörter erhöht.",
 		"pleaseRenewPassword": "Deshalb bitten wir dich, dein Passwort zu erneuern.",
-		"pleaseRenewPasswordInfo": "Dauert nur kurz und sorgt für mehr Schutz."
+		"pleaseRenewPasswordInfo": "Dauert nur kurz und sorgt für mehr Schutz.",
+		"dontPanic": "Keine Panik – alles ist in Ordnung!"
 	},
 	"Welcome": {
 		"heading": "Schön, dass du da bist!",
