--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -727,7 +727,7 @@
 		"skillVisualisationIntro": "These are the areas in which you have strengthened your skills the most:",
 		"skillVisualisationHelp": "Move the mouse pointer over the circles to see the associated skills.",
 		"skillVisualisationSingleIntro": "Your skills in the area of ",
-		"FutureSkillsAccrodingToUlfEhlers": "Future Skills according to Ulf Ehlers",
+		"FutureSkillsAccrodingToNextSkills": "Future Skills according to the NextSkills-Framework",
 		"ESCOAreas": "ESCO areas"
 	},
 	"EditBadge": {
