fix: mobile fixes, new badge image

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -173,7 +173,8 @@
 		"forEleHeadlinet4": "Lernende erhalten und sammeln Badges",
 		"forEleText4": "Lernende erhalten Badges mit den erworbenen Kompetenzen. Sie erlangen dadurch einen besseren Überblick über ihr Können.",
 		"usingOEB": "Diese Institutionen nutzen bereits Open Educational Badges",
-		"createBadgePreview": "Badge-Vorschau erstellen"
+		"createBadgePreview": "Badge-Vorschau erstellen",
+		"signupNow": "Jetzt Registrieren und Badges vergeben"
 	},
 	"Issuer": {
 		"map": "Karte",
