feat: update future skills translation (#1486)
Co-authored-by: David Scheidt <david.scheidt@opensenselab.org>

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -728,7 +728,7 @@
 		"skillVisualisationIntro": "In diesen Bereichen hast du am meisten Kompetenzen gestärkt:",
 		"skillVisualisationHelp": "Bewege den Mauszeiger über die Kreise, um die zugehörigen Kompetenzen zu sehen.",
 		"skillVisualisationSingleIntro": "Deine Kompetenzen im Bereich ",
-		"FutureSkillsAccrodingToUlfEhlers": "Future Skills nach Ulf Ehlers",
+		"FutureSkillsAccrodingToNextSkills": "Future Skills nach dem NextSkills-Framework",
 		"ESCOAreas": "ESCO-Bereiche"
 	},
 	"EditBadge": {
