feat: news post styling, add LinkedIn Button to Footer (#1494)

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -174,7 +174,8 @@
 		"forEleText4": "Lernende erhalten Badges mit den erworbenen Kompetenzen. Sie erlangen dadurch einen besseren Überblick über ihr Können.",
 		"usingOEB": "Diese Institutionen nutzen bereits Open Educational Badges",
 		"createBadgePreview": "Badge-Vorschau erstellen",
-		"signupNow": "Jetzt Registrieren und Badges vergeben"
+		"signupNow": "Jetzt Registrieren und Badges vergeben",
+		"followLinkedIn": "Auf LinkedIn abonnieren"
 	},
 	"Issuer": {
 		"map": "Karte",
