--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -554,7 +554,14 @@
 		"weHelpCreateBadge": "Wir helfen dir, in wenigen Schritten deinen Badge zu erstellen.",
 		"letsGo": "Los geht's!",
 		"closing": "Abschluss",
-		"alignment": "bestätigen"
+		"alignment": "bestätigen",
+		"nothingSuitable": "Nichts passendes dabei?",
+		"tryDetailedDescription": "Probiere es mit einer ausführlicheren Beschreibung",
+		"tips": "Hier ein paar <strong>Tipps</strong>:",
+		"subjectMatter": "Schreibe, was dein Lernangebot <u>fachlich</u> vermittelt.",
+		"howLearningWorks": "Beschreibe auch, <u>wie</u> das Lernen stattfindet.",
+		"inAddition": "Oft können neben fachlichen Kompetenzen auch <u>Soft Skills</u> wie soziale, kommunikative oder Problemlösungs-Fähigkeiten erworben werden – bei Teamarbeit, Experimentieren, Planung, ...",
+		"aiAssistantNote": "Hinweis: KI-Unterstützung – der Badge-Assistent kann Fehler machen. Überprüfe daher die Vorschläge und melde dich bei fehlerhaften Ergebnissen gerne per <a class='tw-text-[var(--color-link)] tw-underline' href='mailto:support@openbadges.education'>E-Mail</a>. <a class='tw-text-[var(--color-link)] tw-underline' href='https://openbadges.education/public/privacy' target='_blank'>Datenschutz bei OEB.</a>"
 	},
 	"Signup": {
 		"youHaveAccount": "Du hast bereits einen Account?",
@@ -648,7 +655,14 @@
 		"subscribe": "Newsletter abonnieren",
 		"confirmedSubscription": "<span class='tw-font-bold tw-text-oebblack'>Du hast deine Newsletter-Anmeldung erfolgreich bestätigt.</span>",
 		"cantUseWithoutSubscription": "Ohne Bestätigung der Nutzungsbedingungen kannst du Open Educational Badges leider nicht nutzen.",
-		"signup": "Newsletter-Anmeldung"
+		"signup": "Newsletter-Anmeldung",
+		"stayUpToDate": "Bleib auf dem Laufenden",
+		"withOurNewsletter": "mit unserem OEB-Newsletter",
+		"dontMissNews": "Du möchtest die neuesten Entwicklungen und Updates rund um Open Educational Badges nicht mehr verpassen?",
+		"thenSubscribe": "Dann abonniere jetzt unseren Newsletter:",
+		"fillRegistrationForm": "Anmeldeformular ausfüllen",
+		"confirmLink": "Bestätigungslink in der zugeschickten E-Mail klicken",
+		"receiveNewsletter": "OEB-Newsletter erhalten"
 	},
 	"TermsOfService": {
 		"newTerms": "Neue Nutzungsbedingungen",
