feat: rename about badges to badges

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -42,7 +42,7 @@
 		"added": "Hinzugefügt",
 		"save": "Speichern",
 		"saveChanges": "Änderungen sichern",
-		"aboutBadges": "Über Badges",
+		"aboutBadges": "Badges",
 		"hours": "Stunden",
 		"minutes": "Minuten",
 		"characters": "Zeichen",
