--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -42,7 +42,7 @@
 		"added": "Added",
 		"save": "Save",
 		"saveChanges": "Save Changes",
-		"aboutBadges": "About Badges",
+		"aboutBadges": "Badges",
 		"hours": "Hours",
 		"minutes": "Minutes",
 		"characters": "Characters",
