--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -373,7 +373,8 @@
 		"networkLogoOnBadge": "The network logo is also displayed on the corresponding badge images.",
 		"youCanAddInstitutions": "You can create your own network and add your partner institutions:",
 		"create": "create network",
-		"name": "name of the network"
+		"name": "name of the network",
+		"addPartnerNext": "You can add your partner institutions in the next step."
 	},
 	"Badge": {
 		"groupBy": "Group by",
