--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -5,6 +5,7 @@
 		"name": "Name",
 		"email": "E-Mail",
 		"institutions": "Institutionen",
+		"network": "Netzwerk",
 		"networks": "Netzwerke",
 		"institutionsNav": "Institutionen A-Z",
 		"account": "Konto",
@@ -111,7 +112,9 @@
 		"change": "ändern",
 		"condition": "Bedingung",
 		"country": "Land",
-		"state": "Bundesland"
+		"state": "Bundesland",
+		"overview": "Übersicht",
+		"rolesAndRights": "Rollen und Rechte"
 	},
 	"NavItems": {
 		"register": "Registrieren",
@@ -365,16 +368,40 @@
 		"rowsAreDuplicates": "Zeilen sind Duplikate und werden ignoriert.",
 		"clickOnAwardBadges": "Klicke auf \"Badges vergeben\", um die Badges jetzt an deine Lernenden zu vergeben.",
 		"creatingBadge": "Erstelle Badge",
-		"memberView": "Mitglieds-Ansicht"
+		"memberView": "Mitglieds-Ansicht",
+		"partOfNetwork": "Teil vom Netzwerk"
 	},
 	"Network": {
+		"networksNav": "Netzwerke A-Z",
 		"noIssuerInNetwork": "Bisher ist keine deiner Institutionen Mitglied in einem Netzwerk.",
 		"networksUseBadgesTogether": "Netzwerke können Badges gemeinsam nutzen.",
 		"networkLogoOnBadge": "Das Logo des Netzwerks wird zusätzlich auf den entsprechenden Badge-Bildern abgebildet.",
 		"youCanAddInstitutions": "Du kannst selbst ein Netzwerk anlegen und deine Partner-Institutionen hinzufügen:",
 		"create": "Netzwerk anlegen",
 		"name": "Name des Netzwerks",
-		"addPartnerNext": "Deine Partner-Institutionen kannst du im nächsten Schritt hinzufügen."
+		"addPartnerNext": "Deine Partner-Institutionen kannst du im nächsten Schritt hinzufügen.",
+		"welcomeDashboard": "Willkommen auf dem Dashboard des Netzwerks",
+		"inviteInstitutions": "Institutionen zum Netzwerk einladen",
+		"addInstitutions": "Institutionen hinzufügen",
+		"rolesAndRights": "<span class='tw-text-link tw-underline'>Rollen und Rechte</span> übertragen sich: Die Einladungs-Mail geht an die Eigentümer:innen der Institutionen. <span class='tw-font-bold'>Diese werden innerhalb des Netzwerks entsprechende Rechte haben wie z.B. das Erstellen von Netzwerk-Badges und das Hinzufügen weiterer Partner-Organisationen</span>.",
+		"addMember_owner": "Eigentümer:in",
+		"addMember_editor": "Editor:in",
+		"addMember_staff": "Mitarbeiter:in",
+		"staffOwnerRights": "Zugriff auf alle Funktionen inkl. Hinzufügen/Entfernen von Editor:innen und Mitarbeiter:innen, Bearbeitung der Institutionsdetails sowie Erstellen, Vergeben und Löschen von Badges inkl. Micro Degrees.",
+		"staffEditorRights": "Rechte zum Erstellen, Vergeben und Löschen von Badges inkl. Micro Degrees.",
+		"staffMemberRights": "Kann die von Eigentümer:innen und/oder Editor:innen erstellten Badges vergeben (inkl. QR-Code-Vergaben erstellen, bearbeiten und löschen).",
+		"issuerOwnersNotified": "Wir haben die Eigentümer:innen der Institutionen per E-Mail benachrichtigt.",
+		"waitForInvitationAcceptance": "Sobald sie die Einladung bestätigt haben, sind sie auf der Partner:innen-Seite sichtbar.",
+		"confirmInvitation": "Einladung bestätigen",
+		"networksHeadline": "Alle Netzwerke in der Übersicht",
+		"noNetworks": "Keine Netzwerke",
+		"networkRegistered": "Netzwerk ist auf OEB registriert",
+		"networksRegistered": "Netzwerke sind auf OEB registriert",
+		"partner": "Mitglieder des Netzwerks",
+		"noInstitutionAddedYet": "Du hast noch keine Institutionen zu deinem Netzwerk hinzugefügt.",
+		"partnerIssuers": "Partner:innen",
+		"notifiedIssuerOwners": "Wir haben die Eigentümer:innen der Institutionen per E-Mail benachrichtigt.",
+		"visibleAfterConfirmation": "Sobald sie die Einladung bestätigt haben, sind sie auf der Partner:innen-Seite sichtbar."
 	},
 	"Badge": {
 		"groupBy": "Gruppieren nach",
