fix: website translation, rm link

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -114,7 +114,8 @@
 		"country": "Land",
 		"state": "Bundesland",
 		"overview": "Übersicht",
-		"rolesAndRights": "Rollen und Rechte"
+		"rolesAndRights": "Rollen und Rechte",
+		"website": "Webseite"
 	},
 	"NavItems": {
 		"register": "Registrieren",
