--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -410,7 +410,8 @@
 		"partnerSince": "Partner since",
 		"partner": "Network Members",
 		"alreadyConfirmed": "Another member of <span class='tw-italic'> {{issuerName}} has already accepted the network invitation from <span class='tw-font-bold'> {{networkName}}</span>.",
-		"view": "View network"
+		"view": "View network",
+		"createBadge": "Create network badge"
 	},
 	"Badge": {
 		"groupBy": "Group by",
